Reproducability using manual_seed()

--- a/00-fundamentals.ipynb
+++ b/00-fundamentals.ipynb
@@ -1406,7 +1406,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "dc35a2aa",
+   "id": "9a30c762",
    "metadata": {},
    "outputs": [
     {
@@ -1437,7 +1437,7 @@
   {
    "cell_type": "code",
    "execution_count": 58,
-   "id": "3146e49e",
+   "id": "63321ec6",
    "metadata": {},
    "outputs": [
     {
@@ -1459,7 +1459,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "107f417f",
+   "id": "e179ac59",
    "metadata": {},
    "source": [
     "### Indexing(selecting data from tensors)"
@@ -1468,7 +1468,7 @@
   {
    "cell_type": "code",
    "execution_count": 60,
-   "id": "4280cb9f",
+   "id": "e062c12d",
    "metadata": {},
    "outputs": [
     {
@@ -1493,7 +1493,7 @@
   {
    "cell_type": "code",
    "execution_count": 61,
-   "id": "9b3ace6e",
+   "id": "fdc32d69",
    "metadata": {},
    "outputs": [
     {
@@ -1517,7 +1517,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "52d30072",
+   "id": "b69b39bf",
    "metadata": {},
    "outputs": [
     {
@@ -1538,7 +1538,7 @@
   {
    "cell_type": "code",
    "execution_count": 63,
-   "id": "127af378",
+   "id": "d20a4ecc",
    "metadata": {},
    "outputs": [
     {
@@ -1559,7 +1559,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "47581f38",
+   "id": "7f6dbc35",
    "metadata": {},
    "outputs": [
     {
@@ -1581,7 +1581,7 @@
   {
    "cell_type": "code",
    "execution_count": 66,
-   "id": "99cf9285",
+   "id": "90e21283",
    "metadata": {},
    "outputs": [
     {
@@ -1603,7 +1603,7 @@
   {
    "cell_type": "code",
    "execution_count": 67,
-   "id": "cafe5eb2",
+   "id": "50b927df",
    "metadata": {},
    "outputs": [
     {
@@ -1625,7 +1625,7 @@
   {
    "cell_type": "code",
    "execution_count": 68,
-   "id": "109f8558",
+   "id": "2ae0c79c",
    "metadata": {},
    "outputs": [
     {
@@ -1647,7 +1647,7 @@
   {
    "cell_type": "code",
    "execution_count": 69,
-   "id": "5ebdab7d",
+   "id": "2adc9c1b",
    "metadata": {},
    "outputs": [
     {
@@ -1669,7 +1669,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a68b4b9a",
+   "id": "66d65864",
    "metadata": {},
    "outputs": [
     {
@@ -1690,7 +1690,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "8b4cbe7c",
+   "id": "62a9b6f2",
    "metadata": {},
    "source": [
     "## Pytorch tensors and numpy\n",
@@ -1704,7 +1704,7 @@
   {
    "cell_type": "code",
    "execution_count": 76,
-   "id": "7ced7b3d",
+   "id": "edcab6b3",
    "metadata": {},
    "outputs": [
     {
@@ -1729,7 +1729,7 @@
   {
    "cell_type": "code",
    "execution_count": 77,
-   "id": "bb6a537c",
+   "id": "df67d39b",
    "metadata": {},
    "outputs": [
     {
@@ -1749,15 +1749,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "380ecf72",
+   "execution_count": 78,
+   "id": "763bd30b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "(tensor([1., 1., 1., 1., 1., 1., 1.]),\n",
+       " array([1., 1., 1., 1., 1., 1., 1.], dtype=float32))"
+      ]
+     },
+     "execution_count": 78,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Tensor to NumPy array\n",
     "tensor = torch.ones(7)\n",
-    "numpy_tensor = tensor.nu"
+    "numpy_tensor = tensor.numpy()\n",
+    "tensor, numpy_tensor"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "064444e0",
+   "metadata": {},
+   "source": [
+    "## Reproducability (trying to tak the randomness out of random)\n",
+    "\n",
+    "To reduce the randomness in neural networks and PyTorch comes the concept of a **random seed.**\n",
+    "\n",
+    "Essentially with the random seed soes is flavour the randomness"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "id": "48dd65f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.4674, 0.4959, 0.2308, 0.9937],\n",
+      "        [0.1905, 0.5702, 0.7636, 0.4963],\n",
+      "        [0.1578, 0.1478, 0.3872, 0.1393]])\n",
+      "tensor([[0.4647, 0.3269, 0.4689, 0.2364],\n",
+      "        [0.2983, 0.0709, 0.2558, 0.7110],\n",
+      "        [0.4261, 0.0182, 0.7281, 0.0013]])\n",
+      "tensor([[False, False, False, False],\n",
+      "        [False, False, False, False],\n",
+      "        [False, False, False, False]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "random_tensor_A = torch.rand(3,4)\n",
+    "random_tensor_B = torch.rand(3,4)\n",
+    "print(random_tensor_A)\n",
+    "print(random_tensor_B)\n",
+    "print(random_tensor_A == random_tensor_B)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "e01cd3e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "tensor([[0.8823, 0.9150, 0.3829, 0.9593],\n",
+      "        [0.3904, 0.6009, 0.2566, 0.7936],\n",
+      "        [0.9408, 0.1332, 0.9346, 0.5936]])\n",
+      "tensor([[0.8823, 0.9150, 0.3829, 0.9593],\n",
+      "        [0.3904, 0.6009, 0.2566, 0.7936],\n",
+      "        [0.9408, 0.1332, 0.9346, 0.5936]])\n",
+      "tensor([[True, True, True, True],\n",
+      "        [True, True, True, True],\n",
+      "        [True, True, True, True]])\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Set the random seed\n",
+    "RANDOM_SEED = 42\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "random_tensor_C = torch.rand(3,4)\n",
+    "torch.manual_seed(RANDOM_SEED)\n",
+    "random_tensor_D = torch.rand(3,4) \n",
+    "# seed works for one line of code, set it always to apply seed to new line of code\n",
+    "print(random_tensor_C)\n",
+    "print(random_tensor_D)\n",
+    "print(random_tensor_C == random_tensor_D)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "c52fffdb",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
